# att_mbads

./: .gitignore  CLAUDE.md  README.md  context.md  pyproject.toml  syllabus.md
class_material/s01_intro_to_polars/: s01_intro_to_polars.ipynb
class_material/s01_intro_to_polars/data/: employees.csv
class_material/s02_data_manipulation/: s02_data_manipulation.ipynb
class_material/s02_data_manipulation/data/: customers.csv  ecommerce_orders.csv
class_material/s03_lazy_evaluation/: s03_lazy_evaluation.ipynb
homework/s01_polars_basics/: s01_polars_basics_homework.ipynb  spotify_tracks.csv  summary.md
homework/s02_data_manipulation/: retail_sales.csv  s02_data_manipulation_homework.ipynb  summary.md
homework/s03_lazy_evaluation/: s03_lazy_evaluation_homework.ipynb  summary.md
